--- a/src/app/pages/nour/nour.component.html
+++ b/src/app/pages/nour/nour.component.html
@@ -394,7 +394,7 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let stage of stages">
-                                <td>Vermeg</td>
+                                <td> {{stage.nomSociete}} </td>
                                 <td>{{ stage.nomCoach }}</td>
                                 <td>{{ stage.startAt }}</td>
                                 <td>{{ stage.endAt }}</td>
