--- a/src/app/pages/reason-dialog/reason-dialog.component.html
+++ b/src/app/pages/reason-dialog/reason-dialog.component.html
@@ -10,8 +10,8 @@
         </mat-form-field>
       </div>
       <div mat-dialog-actions>
-        <button mat-button >Annuler</button>
-        <button mat-button [mat-dialog-close]="data.reason" cdkFocusInitial>Confirmer</button>
+        <button class="btn btn-sm btn-danger" mat-button >Annuler</button>
+        <button class="btn btn-sm btn-danger" mat-button [mat-dialog-close]="data.reason" cdkFocusInitial>Confirmer</button>
       </div>
     </div></div>
     
