--- a/src/app/pages/forum/listforum/listforum.component.html
+++ b/src/app/pages/forum/listforum/listforum.component.html
@@ -12,6 +12,18 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex gap-2" style="overflow-x: auto;">
+                    <button type="button" class="btn btn-light btn-rounded mb-4" *ngFor="let t of tags" (click)="loadQuestionsWithTags(t.name)"> {{t.name}} </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
   <!-- end page title -->
   
   <div class="row" *ngFor="let question of filteredQuestions">
