--- a/src/app/pages/forum/addquestion/addquestion.component.html
+++ b/src/app/pages/forum/addquestion/addquestion.component.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             
-            <div class="card">
+    <!--        <div class="card">
               <div class="card-body">
                 <label class="card-title mb-3">Tags</label>
                 <mat-form-field class="example-full-width" style="width: 100%;" appearance="outline">
@@ -60,7 +60,7 @@
                   </mat-option>
                 </mat-autocomplete>
               </div>
-            </div> 
+            </div> -->
             <button type="submit" class="btn btn-danger mb-3 col-1 " style="margin-left: 20px;" [disabled]="formQuestion.invalid" (click)="onSubmit()">Ajouter</button>
           </div>
           
